# creative-test-agent

./: .dockerignore  .env.example  .env.server.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.server.yml  docker-compose.yml  pyproject.toml
data/release/creative_test_agent_0_1_0_rc1/: Dockerfile  Makefile  README.md  bundle_manifest.json  docker-compose.server.yml  pyproject.toml
data/release/creative_test_agent_0_1_0_rc1/config/model_profiles/: ollama.example.json
data/release/creative_test_agent_0_1_0_rc1/config/pilot_profiles/: client_pilot_template.json
data/release/creative_test_agent_0_1_0_rc1/docs/: advanced_exports.md  advanced_report_exports.md  batch_testing.md  brandbook_compliance_workflow.md  brandbooks_knowledge_base.md  client_demo_script_ru.md  clients_projects_history.md  creative_iterations.md  demo_pilot.md  file_intake.md  final_pilot_checklist_ru.md  json_recovery.md  local_job_queue.md  local_llm_setup.md  local_runtime_reliability.md  local_web_ui.md  operator_guide_ru.md  pilot_checklist.md  product_overview_ru.md  project_workspaces.md  reporting.md  review_workflow.md  users_roles.md
data/release/creative_test_agent_0_1_0_rc1/migrations/: env.py
data/release/creative_test_agent_0_1_0_rc1/scripts/: bootstrap_admin.py  build_client_pilot_pack.py  check_backup.py  check_demo_readiness.py  load_pilot_profile.py  register_prompts.py  reset_demo_data.py  restore_data.py  run_evaluation.py  seed_demo_data.py
data/release/creative_test_agent_0_1_0_rc1/src/: main.py
docs/: architecture.md  auth_roles.md  mvp_scope.md  (+12 more)
(+484 files in other folders)
