[project]
name = "creative-test-agent"
version = "0.1.0"
description = "Local-first backend for pre-testing marketing creatives"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "python-multipart>=0.0.12",
    "pypdf>=5.1.0",
    "Pillow>=11.0.0",
    "jinja2>=3.1.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
